--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Eventer",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Utility for easy events handling",
-  "main": "eventer.js",
+  "main": "./src/eventer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
