--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "eventer-js",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Utility for easy events handling",
-  "main": "./src/eventer.js",
+  "main": "./dist/eventer.js",
+  "module": "./src/eventer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/AndreaGottardi/eventer/issues"
   },
-  "homepage": "https://github.com/AndreaGottardi/eventer#readme"
+  "homepage": "https://github.com/AndreaGottardi/eventer#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "webpack": "^2.5.0"
+  }
 }
