--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "WEBPACK_ENV=build webpack --progress --colors",
-	"prod": "WEBPACK_ENV=prod webpack -p --progress --colors"
+    "prod": "WEBPACK_ENV=prod webpack -p --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "webpack": "^2.5.0"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
